Update 2025 day 2 part 1
Add skipping odd length number strings.
Need to fix logic for even length number strings.

Additionally, shortened names for Python Debugger Configurations.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "cwd": "${fileDirname}"
     },
     {
-      "name": "Python Debugger: [test.txt]",
+      "name": "[test.txt]",
       "type": "debugpy",
       "request": "launch",
       "program": "${file}",
@@ -20,7 +20,7 @@
       ]
     },
     {
-      "name": "Python Debugger: [test.txt, DEBUG]",
+      "name": "[test.txt, DEBUG]",
       "type": "debugpy",
       "request": "launch",
       "program": "${file}",
