Update 2025 day 2 part 2 and add log files

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,18 @@
         "test.txt",
         "DEBUG"
       ]
+    },
+    {
+      "name": "[test.txt, DTEST]",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal",
+      "cwd": "${fileDirname}",
+      "args": [
+        "test.txt",
+        "DTEST"
+      ]
     }
   ]
 }
