--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "cwd": "${fileDirname}"
     },
     {
-      "name": "[--file=test.txt --log=DEBUG]",
+      "name": "[test.txt DEBUG]",
       "type": "debugpy",
       "request": "launch",
       "program": "${file}",
